--- a/frontend/greetings/index.html
+++ b/frontend/greetings/index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="header">
         <div class="header-left">
-            <button onclick="showQueue()">Queue</button>
-            <button onclick="showAbout()">About</button>
+            <button onclick="window.location.href='../greetings/'">Queue</button>
+            <button onclick="window.location.href='../greetings/'">About</button>
         </div>
         <div class="menu-title">QUEUE.COM</div>
         <div class="header-right">
-            <button onclick="showContact()">Contact</button>
-            <button onclick="login()">Login</button>
+            <button onclick="window.location.href='../contact_us/'">Contact</button>
+            <button onclick="window.location.href='../login/'">Login</button>
         </div>
     </div>
 
@@ -29,11 +29,11 @@
             Cut the wait. Dominate the queue. Join or create queues effortlessly with Queue.com. Save your time.
         </p>
         <div class="button-container">
-            <button onclick="createQueue()">Create</button>
-            <button onclick="joinQueue()">Join</button>
+            <button onclick="window.location.href='../in-progress/'">Create</button>
+            <button onclick="window.location.href='../all-queues/'">Join</button>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
