Add some pages in front

--- a/frontend/all-queues/index.html
+++ b/frontend/all-queues/index.html
@@ -10,7 +10,7 @@
 <div class="header">
     <div class="header-left">
         <button onclick="window.location.href='../greetings/'">Queue</button>
-        <button onclick="window.location.href='../greetings/'">About</button>
+        <button onclick="window.location.href='../new-features/'">New Features</button>
     </div>
     <div class="menu-title">QUEUE.COM</div>
     <div class="header-right">
@@ -22,7 +22,7 @@
 <div class="container">
   <h1>Open queues</h1>
   
-  <div class="queue" onclick="window.location.href='https://google.com'">
+  <div class="queue" onclick="window.location.href='../one-queue/'">
     <div class="queue-header">
       <div class="queue-name">Express Queue 1</div>
       <div class="queue-count" id="express-count-1">0/10</div>
@@ -30,7 +30,7 @@
     <div class="queue-description">Fast-track service for quick transactions. Ideal for simple inquiries or express check-ins.</div>
   </div>
 
-  <div class="queue" onclick="window.location.href='https://google.com'">
+  <div class="queue" onclick="window.location.href='../one-queue/'">
     <div class="queue-header">
       <div class="queue-name">Express Queue 2</div>
       <div class="queue-count" id="express-count-2">0/10</div>
@@ -38,7 +38,7 @@
     <div class="queue-description">Additional express lane for efficient service. Perfect for customers with minimal processing needs.</div>
   </div>
   
-  <div class="queue" onclick="window.location.href='https://google.com'">
+  <div class="queue" onclick="window.location.href='../one-queue/'">
     <div class="queue-header">
       <div class="queue-name">Regular Queue</div>
       <div class="queue-count" id="regular-count">0/10</div>
@@ -46,7 +46,7 @@
     <div class="queue-description">Standard service line for general inquiries and transactions. Suitable for most customer needs.</div>
   </div>
   
-  <div class="queue" onclick="window.location.href='https://google.com'">
+  <div class="queue" onclick="window.location.href='../one-queue/'">
     <div class="queue-header">
       <div class="queue-name">VIP Queue</div>
       <div class="queue-count" id="vip-count">0/10</div>
