--- a/frontend/contact_us/index.html
+++ b/frontend/contact_us/index.html
@@ -10,7 +10,7 @@
 <div class="header">
     <div class="header-left">
         <button onclick="window.location.href='../greetings/'">Queue</button>
-        <button onclick="window.location.href='../greetings/'">About</button>
+        <button onclick="window.location.href='../new-features/'">New Features</button>
     </div>
     <div class="menu-title">QUEUE.COM</div>
     <div class="header-right">
