--- a/frontend/greetings/index.html
+++ b/frontend/greetings/index.html
@@ -10,7 +10,7 @@
     <div class="header">
         <div class="header-left">
             <button onclick="window.location.href='../greetings/'">Queue</button>
-            <button onclick="window.location.href='../greetings/'">About</button>
+            <button onclick="window.location.href='../new-features/'">New Features</button>
         </div>
         <div class="menu-title">QUEUE.COM</div>
         <div class="header-right">
@@ -29,7 +29,7 @@
             Cut the wait. Dominate the queue. Join or create queues effortlessly with Queue.com. Save your time.
         </p>
         <div class="button-container">
-            <button onclick="window.location.href='../in-progress/'">Create</button>
+            <button onclick="window.location.href='../create-queue/'">Create</button>
             <button onclick="window.location.href='../all-queues/'">Join</button>
         </div>
     </div>
