--- a/frontend/contact_us/index.html
+++ b/frontend/contact_us/index.html
@@ -23,7 +23,7 @@
     <div class="container">
         <h1>Contact Us</h1>
         
-        <form class="contact-form" id="contactForm">
+        <form class="contact-form" id="contactForm" action="http://localhost:8080/tickets/create" method="POST">
             <div class="form-group">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
