Add displaying of real queues

--- a/frontend/all-queues/index.html
+++ b/frontend/all-queues/index.html
@@ -22,7 +22,7 @@
 <div class="container">
   <h1>Open queues</h1>
   
-  <div class="queue" onclick="window.location.href='../one-queue/'">
+  <!-- <div class="queue" onclick="window.location.href='../one-queue/'">
     <div class="queue-header">
       <div class="queue-name">Express Queue 1</div>
       <div class="queue-count" id="express-count-1">0/10</div>
@@ -52,7 +52,7 @@
       <div class="queue-count" id="vip-count">0/10</div>
     </div>
     <div class="queue-description">Priority service for VIP customers. Offers personalized attention and expedited processing.</div>
-  </div>
+  </div> -->
 </div>
 
 <script src="script.js"></script>
